Fix feature bottom margin on mobile devices

--- a/css/index.css
+++ b/css/index.css
@@ -318,6 +318,7 @@
         display: flex;
         flex-direction: column;
         align-items: center;
+        margin-bottom: 10px;
     }
     .feature-image-block {
         position: static;
